--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,17 @@
     <title>React App</title>
   </head>
   <body>
+    <style>
+      img {
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        -webkit-user-drag: none;
+        user-drag: none;
+        -webkit-touch-callout: none;
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
