logo and modifications

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
   </head>
   <body>
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+      * {
+        font-family: "Roboto", sans-serif;
+      }
       img {
         -moz-user-select: none;
         -webkit-user-select: none;
